recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: not found: value step
    current(step)
            ^Tree:15: error: not found: value step
    current(step)
            ^Tree:17: error: not found: value lenght
    recule(lenght)
           ^