recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)
{
  if(steps<0)
  {
    return
  }
  else
  {
    current(step)
    avance(steps)
    droite(angle)
    tree(steps-1,length*shrink,angle,shrink)
    gauche(2*angle)
    tree(steps-1,length*shrink,angle,shrink)
    current(step)
    droite(angle)
    recule(lenght)
  }
}